# aibal

./: .gitignore  .prettierignore  .prettierrc  README.md  README_CN.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  任务前置规划清单.md  功能清单-插件优先架构.md  功能清单.md  插件系统设计文档.md
.claude/: codex-sessions.json  context-initial.json  operations-log.md  review-phase7-codex.md  review-phase7-fixes.md  review-report-phase2-v2.md  review-report-phase2-v3.md  review-report-phase2.md  review-report.md  功能清单-Claude使用量追踪器.md
.claude/catchup/: phase1-20251228.md  phase1-fixes-20251228.md  phase2-2025-12-28.md  phase3-reliability-2025-12-28.md  phase3-reliability-fixes-2025-12-28.md  phase4-communication-config-2025-12-29.md  phase4-complete-session-2025-12-29.md  phase4-fixes-final-2025-12-29.md  phase4-fixes-session-2025-12-29.md  phase4-fixes-v2-2025-12-29.md  phase4-fixes-v3-2025-12-29.md  phase4-fixes-v4-2025-12-29.md  phase4-integration-complete-2025-12-29.md  phase4-reload-fix-2025-12-29.md  phase4-session-summary-2025-12-29-v2.md  phase5a-security-toolchain-20251228.md  phase7-2025-12-28.md  phase7-continue-20251228.md  phase7-fixes-20251228.md  (+13 more)
contracts/: README.md  api-version-policy.md  event-naming.md  json-canonical.md  manifest.schema.json  signature-trust-model.md  storage-cache-api.md
docs/: Plugin-Development.md
public/: registry.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.claude/catchup/: session-2025-12-28-security-review.md
src-tauri/capabilities/: default.json
src-tauri/examples/: gen_keys.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: events.rs  installer.rs  ipc.rs  mod.rs  plugin.rs
src-tauri/src/plugin/: config.rs  event_bus.rs  lifecycle.rs  mod.rs  permission.rs  runtime.rs  tests.rs  types.rs  watcher.rs
src-tauri/src/plugin/monitoring/: alert.rs  mod.rs  notification.rs  sliding_window.rs
src-tauri/src/plugin/sandbox/: console.rs  context.rs  encoding.rs  error.rs  fetch.rs  mod.rs  timer.rs
src-tauri/src/reliability/: cache.rs  mod.rs  rate_limiter.rs  retry.rs  scheduler.rs  tests.rs
src-tauri/src/security/: canonical.rs  extractor.rs  integrity.rs  mod.rs  signature.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/window/: mod.rs
web-ui/: app_prototype.html  dashboard.html  index.css  settings.html  setup.html
(+55 files in other folders)
